--- a/woodmenGame/Info.plist
+++ b/woodmenGame/Info.plist
@@ -35,9 +35,9 @@
 	<key>FacebookAdvertiserIDCollectionEnabled</key>
 	<true/>
 	<key>FacebookAppID</key>
-	<string>0</string>
+	<string>1051561392695225</string>
 	<key>FacebookClientToken</key>
-	<string>0</string>
+	<string>06e0ebf4a5040c200fbe0d8316b20063</string>
 	<key>FacebookDisplayName</key>
 	<string>Name App</string>
 	<key>LSRequiresIPhoneOS</key>
